objects/Inverter_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date after the inverter will not be available. 
Release WW22 - 2016</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <description>Manufacturer of the specific inverter being referenced via the item lookup field.
Release WW22 - 2016</description>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarEdge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microinverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunverge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inverter item lookup from Oracle Item ID
Release WW22 - 2016</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Inverter Configurations</relationshipLabel>
        <relationshipName>Inverter_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Monitoring configuration associated with Inverter
Release WW22 - 2016</description>
        <label>Monitoring Configuration</label>
        <referenceTo>Monitoring_Configuration__c</referenceTo>
        <relationshipLabel>Inverter Configurations</relationshipLabel>
        <relationshipName>Inverter_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Board_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Order Management: Field added to indicate if an inverter has its own on-board monitoring attachment. Added per requirements of PT #123866151
Release: WW32 - 2016</description>
        <label>On-Board Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the inverter will be available to sell.
Release WW22 - 2016</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage_Ready_Inverter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Order Management: Field used to determine if an inverter is classified as &quot;Storage Ready&quot;. Will be used to validate availability and addition of storage units to inverters.
Release WW28 - 2016</description>
        <label>Storage Ready Inverter?</label>
        <type>Checkbox</type>
    </fields>
    <label>Inverter Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inverter_Manufacturer__c</columns>
        <columns>Item__c</columns>
        <columns>Monitoring__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_with_Created</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All with Created</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Inverter Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inverter Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>